# Goylord

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Changes.md  Dockerfile  Issues.md  README.md  REWRITE.md  docker-compose.quickstart.yml  docker-compose.windows.yml  docker-compose.yml  go.work  package.json  test-vue-api.spec.ts
.github/: renovate.json
BackstageCapture/: BackstageCapture.vcxproj
BackstageInjection/: BackstageInjection.vcxproj  BackstageInjection.vcxproj.filters
Goylord-Client/: .env.example  go.mod  go.sum
Goylord-Desktop/: .gitignore  PLEASE_READ.txt  README.md  package.json
Goylord-Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Goylord-Desktop/src-tauri/capabilities/: default.json
Goylord-Desktop/src-tauri/icons/: icon.icns
Goylord-Desktop/src-tauri/permissions/: app-commands.toml
Goylord-Desktop/src-tauri/src/: lib.rs  main.rs
Goylord-Server/: .env.example  config.json.example  package.json  plugin-signing.pub  tailwind.config.js  tsconfig.json
docker/: agent-builder.Dockerfile
docs/: BACKSTAGE_CAPTURE.md  BACKSTAGE_INJECTION.md  BUILD_DEPLOYMENT.md  BUILD_PLUGIN_DEVELOPMENT.md  DEV_HISTORY.md  FEATURES.md  GOYLORD_CLIENT.md  GOYLORD_DESKTOP.md  GOYLORD_SERVER.md  PLUGIN_SYSTEM.md  PROJECT_STRUCTURE.md  STRESS_TESTING.md  TECH_STACK.md
plugins/: BUILD-PLUGINS.md  PLUGINS.md
scripts/: build-backstage-capture-dll.bat  build-backstage-capture-dll.sh  build-backstage-dll.bat  build-backstage-dll.sh  build-clients.bat  build-desktop.bat  build-desktop.sh  build-prod-package.bat  start-dev.sh  (+17 more)
(+770 files in other folders)
